--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<div>Rock , paper , crossblades</div>
-    <script src="index.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>rock,paper,scissors</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body >
+		<div class="viewPlayer">user</div>
+		<div class="viewComp">computer</div>
+
+		<h1> im still still gonna work on the ui but for now enjoy this </h1>
+		<!-- scores -->
+		<div class="score">
+			score
+		</div>
+		<div class="container">
+			<button class="rock">&#128511;</button>
+
+			<button class="paper">&#128195;</button>
+
+			<button class="scissors">&#9996;</button>
+		</div>
+		<br />
+		<div class="compcontainer">
+			<p class="rock">&#128511;</p>
+			<p class="paper">&#128195;</p>
+			<p class="scissors">&#9996;</p>
+		</div>
+
+		<script src="index.js"></script>
+	</body>
 </html>
